<resources>
    <string name="app_name">ActiviBoost</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_diary">Diary</string>
    <string name="title_patients">Patients</string>
    <string name="title_activities">Activities</string>
    <string name="title_suggest">Suggest an activity</string>
    <string name="title_add">Add activities</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activitySignupBtn">Attend</string>
    <string name="nameTxt">participants</string>
    <string name="insuranceTxt">time</string>
    <string name="diary_date">00-00-0000</string>
    <string name="diary_entry">Diary entry</string>
    <string name="button_add_diary">Add New Diary</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="myActivities">My Activities List</string>
    <string name="sugActivities">Suggested activities</string>
    <string name="Activities">Activities List</string>
    <string name="diary_text_date">Date</string>
    <string name="diary_edit_textfield_hint">Write your notes here...</string>
    <string name="button_delete_diary">Delete</string>
    <string name="button_diary_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="activityDescription">Enter description the activity</string>
    <string name="activityTitle">Enter title of activity*</string>
    <string name="suggestBtn">Suggest</string>
    <string name="activityDate">Enter date of activity*</string>
    <string name="activityTime">Enter time of activity</string>
    <string name="addBtn">Add</string>
    <string name="deleteBtn">Delete</string>
    <string name="TextSugActivities">Suggested activities</string>
    <string name="suggestActivityBtn">Suggest activity</string>
    <string name="activitySuggested">Activity suggested!</string>
    <string name="textEmpty">You need to write something in the fields.</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="participants">Participants: </string>
    <string name="description">Description: </string>
    <string name="caregivers">Caregivers: </string>
    <string name="time">Time: </string>
    <string name="attendingBtn">Unsubscribe</string>
    <string name="loginSignUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="activityAdded">Activity added!</string>
    <string name="password">Password:</string>
    <string name="next">Next</string>
    <string name="create_user">Create User</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="patient" >Patient</string>
    <string name="caregiver">Caregiver</string>
    <string name="addActivityBtn">Add activity</string>
    <string name="back">Back</string>
    <string name="my_calendar">My calendar</string>
    <string name="upcoming_activities">Upcoming activities:</string>
    <string name="place">Place: </string>
    <string name="add_activity_place">Enter place of the activity</string>
    <string name="activityPlace">Place of activity*</string>
    <string name="cancelActivity">Cancel activity</string>
    <string name="fillOut">You need fill out all required fields</string>
    <string name="caregiverUnsubscribed">You have unsubscribed from the activity</string>
    <string name="caregiverAdded">You are now attending the activity</string>
    <string name="years">years</string>
    <string name="delete_diary">Delete Diary</string>
    <string name="delete_verification">Are you sure you want to delete this diary entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="diary_dublicate_warning">You already added a diary for today.</string>
    <string name="sureDelete">Sure you want to delete?</string>
    <string name="deleteActivity">Delete activity</string>
    <string name="activity">"Activity: "</string>
    <string name="acitvity_today">You have an activity happening today!</string>
    <string name="at_location">At location</string>
    <string name="acitvity_upcoming">You have an activity you are attending in</string>
    <string name="days">days</string>
    <string name="activities_for">"Activities for "</string>
    <string name="no_upcoming_activities">You have no upcoming activies.</string>
    <string name="user_created">User succesfully created!</string>
    <string name="login_cancelled">Login cancelled</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill_in_email_password">Please fill both email and password</string>
    <string name="pass_min_length">Password should be at least 6 characters</string>
    <string name="fill_in_name_age">Please fill both name and age</string>
    <string name="whole_number_age">Please enter age as a whole number</string>
    <string name="login_failed">Login failed</string>


    <!--    Home Fragment -->
    <string name="loading">Loading data. Please hold on!</string>
    <string name="weather_head">Your location\'s current weather</string>
    <string name="home_activities">Today\'s acivities:</string>
    <string name="no_activities_today">You have no activities today.</string>



    <!--Notifications-->
    <string name="trythis">Checkout this activity! </string>
    <string name="suggestions">I\' give you suggestions </string>
    <string name="search">Search</string>
    <string name="x_activities_today">Number of activities in your calendar today</string>


</resources>