<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />
    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/ic_diary"
        android:title="@string/title_diary"></item>
    <item
        android:id="@+id/navigation_patients"
        android:icon="@drawable/ic_patients"
        android:title="@string/title_patients" />
    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/ic_activities"
        android:title="@string/title_activities" />

</menu>